--- a/SA-search_profiling/default/data/ui/views/home.xml
+++ b/SA-search_profiling/default/data/ui/views/home.xml
@@ -1,4 +1,222 @@
 <form>
-  <label>TA-data-dictionary</label>
-  <description>This is an example view in add-on TA-data-dictionary</description>
+  <label>Data Lense</label>
+  <fieldset submitButton="false"></fieldset>
+  <row>
+    <panel>
+      <single>
+        <title>License Volume</title>
+        <search>
+          <query>|makeresults | eval quoto=6.5*1024</query>
+          <earliest>@d</earliest>
+          <latest>now</latest>
+        </search>
+        <option name="drilldown">none</option>
+        <option name="numberPrecision">0</option>
+        <option name="rangeColors">["0x53a051","0x0877a6","0xf8be34","0xf1813f","0xdc4e41"]</option>
+        <option name="refresh.display">progressbar</option>
+        <option name="unit">GB</option>
+      </single>
+    </panel>
+    <panel>
+      <single>
+        <title>Today's Ingest</title>
+        <search>
+          <query>index=_internal source=*license_usage* type=Usage 
+| stats sum(b) as b 
+| eval usage=round(b/(1024*1024*1024),2) | table usage</query>
+          <earliest>0</earliest>
+          <latest></latest>
+        </search>
+        <option name="drilldown">none</option>
+        <option name="numberPrecision">0.0</option>
+        <option name="rangeColors">["0x53a051","0x0877a6","0xf8be34","0xf1813f","0xdc4e41"]</option>
+        <option name="refresh.display">progressbar</option>
+        <option name="unit">GB</option>
+        <option name="useColors">0</option>
+      </single>
+    </panel>
+    <panel>
+      <single>
+        <title>Average Daily Ingest (Last 7 days)</title>
+        <search>
+          <!--query>index=_internal source=*license_usage* type=RolloverSummary 
+| timechart span=1d sum(b) AS b | stats avg(b) AS b | eval usage=case(b/1024&lt;=1,tostring(b)+" bytes",b/(1024*1024)&lt;=1,tostring(round(b/1024,2))+" KB",b/(1024*1024*1024)&lt;=1,tostring(round(b/(1024*1024),2))+" MB",b/(1024*1024*1024*1024)&lt;=1,tostring(round(b/(1024*1024*1024),2))+" GB",b/(1024*1024*1024*1024*1024)&lt;=1,tostring(round(b/(1024*1024*1024*1024),2))+" TB",1==1,"bogus") | table usage</query-->
+          <query>|inputlookup lic_usage_summary.csv | eval GB=bytes/1024/1024/1024| table _time GB | tail 7 | stats avg(GB) AS GB</query>
+          <earliest>-7d@d</earliest>
+          <latest>now</latest>
+        </search>
+        <option name="drilldown">none</option>
+        <option name="rangeColors">["0x53a051","0x0877a6","0xf8be34","0xf1813f","0xdc4e41"]</option>
+        <option name="refresh.display">progressbar</option>
+        <option name="unit">GB</option>
+      </single>
+    </panel>
+    <panel>
+      <single>
+        <title>Trend (30 days)</title>
+        <search>
+          <!--query>index=_internal component=RolloverSummary sourcetype=stash version=5.0
+| timechart span=1d max(b) AS usage | head 29</query-->
+          <query>|inputlookup lic_usage_summary.csv | eval GB=bytes/1024/1024/1024| table _time GB</query>
+          <earliest>-30d@d</earliest>
+          <latest>now</latest>
+        </search>
+        <option name="drilldown">none</option>
+        <option name="rangeColors">["0x53a051","0x0877a6","0xf8be34","0xf1813f","0xdc4e41"]</option>
+        <option name="refresh.display">progressbar</option>
+        <option name="showTrendIndicator">1</option>
+        <option name="unit">GB</option>
+      </single>
+    </panel>
+  </row>
+  <row>
+    <panel>
+      <title>Data Sources</title>
+      <input type="multiselect" token="idx" searchWhenChanged="true">
+        <label>Index</label>
+        <choice value="*">All</choice>
+        <default>*</default>
+        <fieldForLabel>index</fieldForLabel>
+        <fieldForValue>index</fieldForValue>
+        <search>
+          <query>| inputlookup list_index_sourcetypes.csv | search index!=_*| stats count by index</query>
+          <earliest>-24h@h</earliest>
+          <latest>now</latest>
+        </search>
+        <delimiter> OR </delimiter>
+        <prefix>(</prefix>
+        <suffix>)</suffix>
+        <valuePrefix>idx="</valuePrefix>
+        <valueSuffix>"</valueSuffix>
+      </input>
+      <input type="multiselect" token="st" searchWhenChanged="true">
+        <label>Sourcetype(s)</label>
+        <choice value="*">All</choice>
+        <default>*</default>
+        <fieldForLabel>sourcetype</fieldForLabel>
+        <fieldForValue>sourcetype</fieldForValue>
+        <search>
+          <query>| inputlookup list_index_sourcetypes.csv | rename index AS idx| search NOT idx=_* $idx$| stats count by sourcetype</query>
+          <earliest>-24h@h</earliest>
+          <latest>now</latest>
+        </search>
+        <delimiter> OR </delimiter>
+        <prefix>(</prefix>
+        <suffix>)</suffix>
+        <valuePrefix>st="</valuePrefix>
+        <valueSuffix>"</valueSuffix>
+      </input>
+      <input type="time" token="timerange">
+        <label>Time Range</label>
+        <default>
+          <earliest>@d</earliest>
+          <latest>now</latest>
+        </default>
+      </input>
+      <input type="radio" token="field1">
+        <label></label>
+        <choice value="sankey">Use Cases</choice>
+        <choice value="chart">Chart</choice>
+        <choice value="table">Table</choice>
+        <change>
+          <condition value="chart">
+            <set token="chart">true</set>
+            <unset token="table"></unset>
+            <unset token="use_case"></unset>
+          </condition>
+          <condition value="table">
+            <set token="table">true</set>
+            <unset token="chart"></unset>
+            <unset token="use_case"></unset>
+          </condition>
+          <condition value="sankey">
+            <set token="use_case">true</set>
+            <unset token="chart"></unset>
+            <unset token="table"></unset>
+          </condition>
+        </change>
+        <default>table</default>
+      </input>
+      <table depends="$table$">
+        <title>Today's Ingest</title>
+        <search>
+          <!--query>(index=_internal source=*license_usage* type=Usage) OR (index=search_profiling search_status=granted) $idx$ $st$ | eval idx=if(idx=="default","main",idx)| append [| inputlookup list_index_sourcetypes.csv | rename index AS idx, sourcetype AS st | search idx="$idx$" st="$st$" NOT idx="_*" | eval b=0 ]|stats sum(b) AS b, dc(search_id) AS search_count by st, idx | eventstats sum(b) AS today_total | eval [search index=_internal sourcetype=splunkd component=licenseusage type=RolloverSummary productType=enterprise earliest=@d | stats values(stacksz) AS stacksz by licenseGuids | stats sum(stacksz) AS license_volume | eval search="quota="+tostring(license_volume)| table search] | eval perc_license_quota=round(100*b/quota,2) | search b&gt;0 NOT idx=_* | eval perc_daily_volume=round(100*b/today_total,2) | eval usage=case(b/1024&lt;=1,tostring(b)+" bytes",b/(1024*1024)&lt;=1,tostring(round(b/1024))+" KB",b/(1024*1024*1024)&lt;=1,tostring(round(b/(1024*1024),2))+" MB",b/(1024*1024*1024*1024)&lt;=1,tostring(round(b/(1024*1024*1024),2))+" GB",b/(1024*1024*1024*1024*1024)&lt;=1,tostring(round(b/(1024*1024*1024*1024),2))+" TB",1==1,"bogus") | table st idx usage perc* search_count | sort -perc_daily_volume</query-->
+          <query>index=search_profiling NOT datasource=_* | stats count AS search_count by datasource | join type=outer datasource [| inputlookup list_index_sourcetypes.csv | search NOT index=_* | lookup sb_licdetails.csv data | rename 1 AS usage | eval quota=6.5*1024*1024*1024*1024 | eval perc_license_volume=round(100*usage/quota,2) | eval [|inputlookup lic_usage_summary.csv | tail 1 | return bytes] | eval perc_daily_volume=round(100*usage/bytes,2) |eval usage_GB=round(usage/1024/1024/1024,2) | table sourcetype index usage_GB perc*  | eval datasource=index+"@"+sourcetype ] | sort -perc_daily_volume  | table sourcetype index usage_GB perc* search_count</query>
+          <earliest>0</earliest>
+          <latest></latest>
+        </search>
+        <option name="count">10</option>
+        <option name="refresh.display">progressbar</option>
+        <format type="color" field="perc_daily_volume">
+          <colorPalette type="minMidMax" maxColor="#31A35F" minColor="#FFFFFF"></colorPalette>
+          <scale type="minMidMax"></scale>
+        </format>
+        <format type="color" field="perc_license_quota">
+          <colorPalette type="list">[#65A637,#6DB7C6,#F7BC38,#F58F39,#D93F3C]</colorPalette>
+          <scale type="threshold">0,30,70,100</scale>
+        </format>
+        <format type="color" field="search_count">
+          <colorPalette type="minMidMax" maxColor="#A2CC3E" minColor="#FFFFFF"></colorPalette>
+          <scale type="minMidMax"></scale>
+        </format>
+        <drilldown>
+          <link target="_self">/app/SA-search_profiling/data_breakdown?form.idx=$row.index$&amp;form.st=$row.sourcetype$</link>
+        </drilldown>
+      </table>
+      <viz depends="$chart$" type="treemap_app.treemap">
+        <search>
+          <query>index=search_profiling NOT datasource=_* | stats count AS search_count by datasource | join type=outer datasource [| inputlookup sb_licdetails.csv | table data * | untable data day bytes | search day=1 | rename data AS datasource | table datasource bytes] | search NOT datasource=*@stash | rex field="datasource" "^(?&lt;idx&gt;[^@]+)@(?&lt;st&gt;.+)"  
+| eval GB=round(bytes/1024/1024/1024,2) | table idx st GB search_count</query>
+          <earliest>0</earliest>
+          <latest></latest>
+          <sampleRatio>1</sampleRatio>
+        </search>
+        <option name="drilldown">all</option>
+        <option name="refresh.display">progressbar</option>
+        <option name="treemap_app.treemap.colorMode">sequential</option>
+        <option name="treemap_app.treemap.maxCategories">1000</option>
+        <option name="treemap_app.treemap.maxColor">#6db7c6</option>
+        <option name="treemap_app.treemap.minColor">#f0f7f9</option>
+        <option name="treemap_app.treemap.numOfBins">9</option>
+        <option name="treemap_app.treemap.showLabels">true</option>
+        <option name="treemap_app.treemap.showLegend">true</option>
+        <option name="treemap_app.treemap.showTooltip">true</option>
+        <option name="treemap_app.treemap.useColors">true</option>
+        <option name="treemap_app.treemap.useZoom">true</option>
+        <option name="trellis.enabled">0</option>
+        <option name="trellis.scales.shared">1</option>
+        <option name="trellis.size">medium</option>
+        <drilldown>
+          <link target="_self">/app/SA-search_profiling/data_breakdown?form.idx=$row.idx$&amp;form.st=$row.st$</link>
+        </drilldown>
+      </viz>
+      <viz depends="$use_case$" type="sankey_diagram_app.sankey_diagram">
+        <search>
+          <query>| inputlookup use_cases | search [| inputlookup data_sources | search $idx$ $st$ | mvexpand use_cases | table use_cases | rename use_cases AS title] | eval count=1 | rename category AS use_cases| table title use_cases count | append [| inputlookup data_sources | search $idx$ $st$ | mvexpand use_cases | eval count=1 | table title use_cases count ] | eval count=count*10</query>
+          <earliest>0</earliest>
+          <latest></latest>
+          <sampleRatio>1</sampleRatio>
+        </search>
+        <option name="drilldown">all</option>
+        <option name="refresh.display">progressbar</option>
+        <option name="sankey_diagram_app.sankey_diagram.colorMode">sequential</option>
+        <option name="sankey_diagram_app.sankey_diagram.maxColor">#6db7c6</option>
+        <option name="sankey_diagram_app.sankey_diagram.minColor">#ffffff</option>
+        <option name="sankey_diagram_app.sankey_diagram.numOfBins">6</option>
+        <option name="sankey_diagram_app.sankey_diagram.showBackwards">false</option>
+        <option name="sankey_diagram_app.sankey_diagram.showLabels">true</option>
+        <option name="sankey_diagram_app.sankey_diagram.showLegend">false</option>
+        <option name="sankey_diagram_app.sankey_diagram.showSelf">false</option>
+        <option name="sankey_diagram_app.sankey_diagram.showTooltip">true</option>
+        <option name="sankey_diagram_app.sankey_diagram.styleBackwards">false</option>
+        <option name="sankey_diagram_app.sankey_diagram.useColors">true</option>
+        <option name="trellis.enabled">0</option>
+        <option name="trellis.scales.shared">1</option>
+        <option name="trellis.size">medium</option>
+        <drilldown>
+          <link target="_self">/app/SA-search_profiling/data_breakdown?form.idx=$row.idx$&amp;form.st=$row.st$</link>
+        </drilldown>
+      </viz>
+    </panel>
+  </row>
 </form>
